fixing JRP alignment header

--- a/app/assets/stylesheets/styles/kellyn_overrides.scss
+++ b/app/assets/stylesheets/styles/kellyn_overrides.scss
@@ -15,3 +15,7 @@
 .pref{
     
 }
+
+h5{
+    text-size: 11px;
+}
